modules/wycs/tests/valid/test_set_13.wyal
define NatSet({int} xs) as:
  forall (int x in xs): 
    x >= 0

assert:
  forall ({int} xs, int x in xs):
       if:
         NatSet(xs)
       then:
         x >= 0
