modules/wycs/tests/invalid/test_059.wyal
define NatSet({int} xs) is:
   forall (int x):
     x in xs ==> x >= 0

assert:
  forall(int x, {int} xs):
    if:
       NatSet(xs)
       x in xs
    then:
       x > 0